--- a/task_5_Quantum/login.html
+++ b/task_5_Quantum/login.html
@@ -121,5 +121,5 @@
       </div>
     </div>
   </body>
-  <script src="./loginscript.js"></script>
+  <script src="./js/loginscript.js"></script>
 </html>
