--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -49,10 +49,43 @@
       </div>
 
       <div class="main-content">
-        <!-- <div class="welcome-message">
-          <h1>Welcome to Teacher Dashboard</h1>
-        </div> -->
+        <section class="stats-section">
+          <div class="stat-item">
+            <div class="stat-icon">
+              <img src="./assets/icons/courses.svg" alt="" srcset="" />
+            </div>
+            <div class="stat-info">
+              <h3>4</h3>
+              <p>Courses</p>
+            </div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-icon">
+              <img src="./assets/icons/classes.svg" alt="" srcset="" />
+            </div>
+            <div class="stat-info">
+              <h3>4</h3>
+              <p>Classes</p>
+            </div>
+          </div>
+        </section>
       </div>
+      <div class="courses-header">
+        <div class="courses-info">Showing 4 of 4 courses</div>
+        <div class="sort-controls">
+          <span>Sort By:</span>
+          <select class="sort-select">
+            <option>Course Name</option>
+            <option>Date Created</option>
+            <option>Students</option>
+          </select>
+          <button class="sort-btn">
+            <img src="./assets/icons/back.svg" alt="" srcset="" />
+          </button>
+        </div>
+      </div>
+      <div class="line"></div>
+      <br />
     </div>
   </body>
   <script src="./js//teacher_dashbord.js"></script>
