--- a/task_5_Quantum/teacher_dashbord.html
+++ b/task_5_Quantum/teacher_dashbord.html
@@ -85,7 +85,137 @@
         </div>
       </div>
       <div class="line"></div>
-      <br />
+      <!-- Courses Grid -->
+      <div class="courses-grid">
+        <!-- Course 1: Acceleration -->
+        <div class="course-card">
+          <div class="star-icon">⭐</div>
+          <div class="course-content">
+            <div class="course-image physics"></div>
+            <div class="course-info">
+              <div class="course-header">
+                <div>
+                  <h3 class="course-title">Acceleration</h3>
+                  <div class="course-meta">Physics • Grade 7 +2</div>
+                  <div class="course-stats">
+                    <span>4 Units</span>
+                    <span>18 Lessons</span>
+                    <span>24 Topics</span>
+                  </div>
+                </div>
+              </div>
+              <div class="course-class">
+                Mr. Frank's Class B ▼
+                <div class="course-class-info">
+                  <span>50 Students</span>
+                  <span>21-Jan-2020 - 21-Aug-2020</span>
+                </div>
+              </div>
+              <div class="course-actions">
+                <button class="action-btn">👁️</button>
+                <button class="action-btn">📋</button>
+                <button class="action-btn">📊</button>
+                <button class="action-btn">📈</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course 2: Displacement, Velocity and Speed -->
+        <div class="course-card">
+          <div class="star-icon">⭐</div>
+          <div class="course-content">
+            <div class="course-image physics"></div>
+            <div class="course-info">
+              <div class="course-header">
+                <div>
+                  <h3 class="course-title">Displacement, Velocity and Speed</h3>
+                  <div class="course-meta">Physics 2 • Grade 6 +3</div>
+                  <div class="course-stats">
+                    <span>2 Units</span>
+                    <span>15 Lessons</span>
+                    <span>20 Topics</span>
+                  </div>
+                </div>
+              </div>
+              <div class="course-class">No Classes ▼</div>
+              <div class="course-actions">
+                <button class="action-btn">👁️</button>
+                <button class="action-btn">📋</button>
+                <button class="action-btn">📊</button>
+                <button class="action-btn">📈</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course 3: Introduction to Biology -->
+        <div class="course-card">
+          <div class="star-icon">⭐</div>
+          <div class="course-content">
+            <div class="course-image biology"></div>
+            <div class="course-info">
+              <div class="course-header">
+                <div>
+                  <h3 class="course-title">
+                    Introduction to Biology: Micro organisms and how they
+                    affect...
+                  </h3>
+                  <div class="course-meta">Biology • Grade 4 +1</div>
+                  <div class="course-stats">
+                    <span>5 Units</span>
+                    <span>16 Lessons</span>
+                    <span>22 Topics</span>
+                  </div>
+                </div>
+              </div>
+              <div class="course-class">
+                All Classes ▼
+                <div class="course-class-info">
+                  <span>300 Students</span>
+                </div>
+              </div>
+              <div class="course-actions">
+                <button class="action-btn">👁️</button>
+                <button class="action-btn">📋</button>
+                <button class="action-btn">📊</button>
+                <button class="action-btn">📈</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Course 4: Introduction to High School Mathematics -->
+        <div class="course-card">
+          <div class="expired-badge">EXPIRED</div>
+          <div class="course-content">
+            <div class="course-image math"></div>
+            <div class="course-info">
+              <div class="course-header">
+                <div>
+                  <h3 class="course-title">
+                    Introduction to High School Mathematics
+                  </h3>
+                  <div class="course-meta">Mathematics • Grade 8 +3</div>
+                </div>
+              </div>
+              <div class="course-class">
+                Mr. Frank's Class A ▼
+                <div class="course-class-info">
+                  <span>44 Students</span>
+                  <span>14-Oct-2019 - 20-Oct-2020</span>
+                </div>
+              </div>
+              <div class="course-actions">
+                <button class="action-btn">👁️</button>
+                <button class="action-btn">📋</button>
+                <button class="action-btn">📊</button>
+                <button class="action-btn">📈</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
   <script src="./js//teacher_dashbord.js"></script>
